Avoid overlapping of horisontal axis on the graph

--- a/style.css
+++ b/style.css
@@ -500,7 +500,6 @@ li.tick-tacks:hover{
 	stroke-width: 2px; 
 	cursor: pointer;
 	fill: #fff;
-	z-index: 200;
 }
 .dot:hover{
 	stroke: rgba(68, 127, 255, 0.3);
